--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,9 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER, ROLE_DIRECTION
+        ROLE_DIRECTION: ROLE_USER
 
 when@test:
     security:
